--- a/css.css
+++ b/css.css
@@ -25,7 +25,7 @@ font-family: Microsoft YaHei UI;
 	position:absolute;
 	margin-left:30px;
 	top:15px;
-	font-size=300px;
+	font-size:300px;
 	/* height=58px; */
 	/* font-family: Microsoft YaHei UI; */
 }
