--- a/css.css
+++ b/css.css
@@ -341,7 +341,7 @@ color:#BE77FF;
 text-decoration:underline; 
 } 
 #introLeftTop a:visited { 
-color:#E6CAFF; 
+color:#FFFFFF; 
 text-decoration:none; 
 } 
 #introLeftTop a:hover { 
